--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ pocketbase/pb_data/logs.db
 pocketbase/pb_data/data.db
 pocketbase/pb_data/data.db
 pocketbase/pb_data/logs.db
+pocketbase/pb_data/logs.db
